<resources>
    <string name="app_name">PetaContentProviderAPP</string>
    <string name="welcome_message">Bienvenid@</string>
    <string name="btn_principal_name">ENTRAR</string>
    <string name="menu_contacto">Contacto</string>
    <string name="menu_acerca_de">Acerca De</string>
    <string name="menu_favoritos">Mascotas Favoritas</string>

    <string name="app_version">Versión 1.0</string>
    <string name="app_descripcion">Si eres amante de las mascotas Petagram debes tenerla en tu móvil.</string>
    <string name="dominio">com.example.contentprovider Héctor</string>
    <string name="derechos">© 2023 Coursera.</string>

    <string name="msj_contacto_1">Completa el siguiente formulario y envíanos un mensaje.</string>
    <string name="msj_contacto_2">Tus comentarios, preguntas y sugerencias son importantes para nosotros.</string>

    <string name="hint_input_nombre_completo">Nombre completo</string>
    <string name="hint_input_correo_electronico">Correo electrónico</string>
    <string name="hint_input_mensaje">Mensaje</string>

    <string name="label_btn_enviar">Enviar mensaje</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
