<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Contacto">

    <include
        android:id="@+id/miActionBar"
        layout="@layout/actionbar">
    </include>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/miActionBar"
        android:orientation="vertical"
        android:layout_margin="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/ivPetagram"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/pupyu"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/msj_contacto_2"
                    android:layout_marginHorizontal="15dp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/msj_contacto_1"
                    android:layout_marginTop="5dp"
                    android:layout_marginHorizontal="15dp"
                    />
            </LinearLayout>
        </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintTextAppearance="@style/HintText">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/inputNombreCompleto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:inputType="textPersonName"
                android:singleLine="true"
                android:textColor="@color/textoInput"
                android:hint="@string/hint_input_nombre_completo" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintTextAppearance="@style/HintText">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/inputCorreoElectronico"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:inputType="textEmailAddress"
                android:singleLine="true"
                android:textColor="@color/textoInput"
                android:hint="@string/hint_input_correo_electronico" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintTextAppearance="@style/HintText">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/inputDescripcion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:inputType="textMultiLine"
                android:textColor="@color/textoInput"
                android:hint="@string/hint_input_mensaje"/>
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btnEnviar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:textColor="#000000"
            android:theme="@style/Boton"
            android:text="@string/label_btn_enviar"
            android:onClick="sendMessage"
            />

    </LinearLayout>
</RelativeLayout>
